# when2task

./: Cargo.toml  LICENSE  README.md  release-plz.toml
crates/w2t_publish/: CHANGELOG.md  Cargo.toml
crates/w2t_publish/tests/: ci.rs
crates/when2task/: CHANGELOG.md  Cargo.toml  README.md
crates/when2task-tests/: Cargo.toml
crates/when2task-tests/tests/: error_handling.rs  integration.rs
crates/when2task/examples/: basic_usage.rs  simple.rs
crates/when2task/src/: blueprint.rs  dependency.rs  errors.rs  executor.rs  id.rs  lib.rs  result.rs  task.rs
crates/when2task/src/blueprint/: errors.rs  mod.rs  w2t_blueprint.rs
crates/when2task/src/exec/: builder.rs  errors.rs  executor.rs  mod.rs  mode.rs
