[package]
name = "when2task-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
when2task = { path = "../when2task" }
tokio = { version = "1.0", features = ["full"] }

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "error_handling"
path = "tests/error_handling.rs"