[package]
name = "when2task"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
derive-getters = "0.5.0"
thiserror = "2.0.16"
derive_more = { version = "2.0.1", features = ["display"], default-features = false }
futures = "0.3.31"
tokio = { version = "1.47.1",features = ["rt-multi-thread"], default-features = false }
